package grpc

import (
	"context"

	"connectrpc.com/connect"

	airgapperv1 "github.com/lcrostarosa/airgapper/backend/gen/airgapper/v1"
	"github.com/lcrostarosa/airgapper/backend/gen/airgapper/v1/airgapperv1connect"
)

// verificationServer implements the VerificationService
type verificationServer struct {
	airgapperv1connect.UnimplementedVerificationServiceHandler
	server *Server
}

func newVerificationServer(s *Server) airgapperv1connect.VerificationServiceHandler {
	return &verificationServer{server: s}
}

// ============================================================================
// Verification Status
// ============================================================================

func (v *verificationServer) GetVerificationStatus(
	ctx context.Context,
	req *connect.Request[airgapperv1.GetVerificationStatusRequest],
) (*connect.Response[airgapperv1.GetVerificationStatusResponse], error) {
	// TODO: Implement full verification status from verification package
	return connect.NewResponse(&airgapperv1.GetVerificationStatusResponse{
		Status:      "ok",
		Initialized: true,
	}), nil
}

// ============================================================================
// Audit Chain
// ============================================================================

func (v *verificationServer) GetAuditEntries(
	ctx context.Context,
	req *connect.Request[airgapperv1.GetAuditEntriesRequest],
) (*connect.Response[airgapperv1.GetAuditEntriesResponse], error) {
	// TODO: Implement audit entry retrieval
	return connect.NewResponse(&airgapperv1.GetAuditEntriesResponse{
		Entries: []*airgapperv1.AuditEntry{},
		Total:   0,
	}), nil
}

func (v *verificationServer) VerifyAuditChain(
	ctx context.Context,
	req *connect.Request[airgapperv1.VerifyAuditChainRequest],
) (*connect.Response[airgapperv1.VerifyAuditChainResponse], error) {
	// TODO: Implement audit chain verification
	return connect.NewResponse(&airgapperv1.VerifyAuditChainResponse{
		Valid:          true,
		EntriesChecked: 0,
	}), nil
}

func (v *verificationServer) ExportAuditChain(
	ctx context.Context,
	req *connect.Request[airgapperv1.ExportAuditChainRequest],
) (*connect.Response[airgapperv1.ExportAuditChainResponse], error) {
	// TODO: Implement audit chain export
	return connect.NewResponse(&airgapperv1.ExportAuditChainResponse{
		Data:        []byte("[]"),
		ContentType: "application/json",
		Filename:    "audit-chain.json",
	}), nil
}

// ============================================================================
// Challenge-Response
// ============================================================================

func (v *verificationServer) CreateChallenge(
	ctx context.Context,
	req *connect.Request[airgapperv1.CreateChallengeRequest],
) (*connect.Response[airgapperv1.CreateChallengeResponse], error) {
	// TODO: Implement challenge creation
	return connect.NewResponse(&airgapperv1.CreateChallengeResponse{
		Challenge: &airgapperv1.Challenge{},
	}), nil
}

func (v *verificationServer) ReceiveChallenge(
	ctx context.Context,
	req *connect.Request[airgapperv1.ReceiveChallengeRequest],
) (*connect.Response[airgapperv1.ReceiveChallengeResponse], error) {
	// TODO: Implement challenge receiving
	return connect.NewResponse(&airgapperv1.ReceiveChallengeResponse{
		Status:  "ok",
		Message: "Challenge received",
	}), nil
}

func (v *verificationServer) ListChallenges(
	ctx context.Context,
	req *connect.Request[airgapperv1.ListChallengesRequest],
) (*connect.Response[airgapperv1.ListChallengesResponse], error) {
	// TODO: Implement challenge listing
	return connect.NewResponse(&airgapperv1.ListChallengesResponse{
		Challenges: []*airgapperv1.Challenge{},
	}), nil
}

func (v *verificationServer) RespondToChallenge(
	ctx context.Context,
	req *connect.Request[airgapperv1.RespondToChallengeRequest],
) (*connect.Response[airgapperv1.RespondToChallengeResponse], error) {
	// TODO: Implement challenge response
	return connect.NewResponse(&airgapperv1.RespondToChallengeResponse{
		Status:  "ok",
		Message: "Response recorded",
	}), nil
}

func (v *verificationServer) VerifyChallenge(
	ctx context.Context,
	req *connect.Request[airgapperv1.VerifyChallengeRequest],
) (*connect.Response[airgapperv1.VerifyChallengeResponse], error) {
	// TODO: Implement challenge verification
	return connect.NewResponse(&airgapperv1.VerifyChallengeResponse{
		Valid:   true,
		Status:  "verified",
		Message: "Challenge verified successfully",
	}), nil
}

// ============================================================================
// Deletion Tickets
// ============================================================================

func (v *verificationServer) CreateTicket(
	ctx context.Context,
	req *connect.Request[airgapperv1.CreateTicketRequest],
) (*connect.Response[airgapperv1.CreateTicketResponse], error) {
	// TODO: Implement ticket creation
	return connect.NewResponse(&airgapperv1.CreateTicketResponse{
		Ticket: &airgapperv1.Ticket{},
	}), nil
}

func (v *verificationServer) RegisterTicket(
	ctx context.Context,
	req *connect.Request[airgapperv1.RegisterTicketRequest],
) (*connect.Response[airgapperv1.RegisterTicketResponse], error) {
	// TODO: Implement ticket registration
	return connect.NewResponse(&airgapperv1.RegisterTicketResponse{
		Status:  "ok",
		Message: "Ticket registered",
	}), nil
}

func (v *verificationServer) ListTickets(
	ctx context.Context,
	req *connect.Request[airgapperv1.ListTicketsRequest],
) (*connect.Response[airgapperv1.ListTicketsResponse], error) {
	// TODO: Implement ticket listing
	return connect.NewResponse(&airgapperv1.ListTicketsResponse{
		Tickets: []*airgapperv1.Ticket{},
	}), nil
}

func (v *verificationServer) GetTicket(
	ctx context.Context,
	req *connect.Request[airgapperv1.GetTicketRequest],
) (*connect.Response[airgapperv1.GetTicketResponse], error) {
	// TODO: Implement ticket retrieval
	return connect.NewResponse(&airgapperv1.GetTicketResponse{
		Ticket: &airgapperv1.Ticket{},
	}), nil
}

func (v *verificationServer) GetTicketUsage(
	ctx context.Context,
	req *connect.Request[airgapperv1.GetTicketUsageRequest],
) (*connect.Response[airgapperv1.GetTicketUsageResponse], error) {
	// TODO: Implement ticket usage retrieval
	return connect.NewResponse(&airgapperv1.GetTicketUsageResponse{
		Usages: []*airgapperv1.TicketUsage{},
	}), nil
}

// ============================================================================
// Witness Checkpoints
// ============================================================================

func (v *verificationServer) SubmitWitnessCheckpoint(
	ctx context.Context,
	req *connect.Request[airgapperv1.SubmitWitnessCheckpointRequest],
) (*connect.Response[airgapperv1.SubmitWitnessCheckpointResponse], error) {
	// TODO: Implement witness checkpoint submission
	return connect.NewResponse(&airgapperv1.SubmitWitnessCheckpointResponse{
		Status:  "ok",
		Message: "Checkpoint submitted",
	}), nil
}

func (v *verificationServer) CreateWitnessCheckpoint(
	ctx context.Context,
	req *connect.Request[airgapperv1.CreateWitnessCheckpointRequest],
) (*connect.Response[airgapperv1.CreateWitnessCheckpointResponse], error) {
	// TODO: Implement witness checkpoint creation
	return connect.NewResponse(&airgapperv1.CreateWitnessCheckpointResponse{
		Checkpoint: &airgapperv1.WitnessCheckpoint{},
	}), nil
}

func (v *verificationServer) GetWitnessCheckpoint(
	ctx context.Context,
	req *connect.Request[airgapperv1.GetWitnessCheckpointRequest],
) (*connect.Response[airgapperv1.GetWitnessCheckpointResponse], error) {
	// TODO: Implement witness checkpoint retrieval
	return connect.NewResponse(&airgapperv1.GetWitnessCheckpointResponse{
		Checkpoint: &airgapperv1.WitnessCheckpoint{},
	}), nil
}
